tdf#96760 Don't assert on presentation with video for non-desktop

Since the OBJ_MEDIA case was only handled '#if HAVE_FEATURE_DESKTOP',
a non-desktop debug build would run into the assert in the
default case and complain about a "Not implemented Starone-Shape".

The corresponding HAVE_FEATURE_DESKTOP switch had been added with
commit c0b3d5be8fcec28190b1f25c9c0fd99916299249
("Try harder to bypass avmedia on non-desktop for now", 2014-04-17).
However, at a quick glance, SvxMediaShape now properly handles
the case where avmedia is not available itself (presumably since
commit 54982d5fea21d9e81e1561a74fd341ddb0570c91, "svx, check
HAVE_FEATURE_AVMEDIA", 2018-01-07).

For an Android Viewer debug build, a placeholder is now shown instead
of the video (just as was the case for a non-debug build already
without this patch), rather than aborting.

Change-Id: I49864a3742d0435cd5346f561dea9f2f804ace70